fix: parquet does not include datetime types.
This utilizes the metadata to determine the type of the column.
All columns whose original type starts with "time" are converted to datetime64[ns].

--- a/notebooks/postgres-parquet-ingest/postgres_parquet_ingest.ipynb
+++ b/notebooks/postgres-parquet-ingest/postgres_parquet_ingest.ipynb
@@ -60,8 +60,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
     "from dataclasses import dataclass\n",
-    "from typing import Optional\n",
+    "from typing import Optional, List, Dict, Any\n",
+    "\n",
+    "@dataclass\n",
+    "class Column:\n",
+    "    \"\"\"A column in the export.\"\"\"\n",
+    "    column_name: str\n",
+    "    original_type: str\n",
+    "    expected_exported_type: str\n",
+    "    original_char_max_length: int\n",
+    "    original_num_precision: int\n",
+    "    original_date_time_precision: int\n",
     "\n",
     "@dataclass\n",
     "class Table:\n",
@@ -79,10 +90,37 @@
     "    name: str\n",
     "    output_schema: Optional[str] = None\n",
     "    output_name: Optional[str] = None\n",
+    "    columns: Optional[List[Column]] = None\n",
     "\n",
     "    def get_S3_path(self, base_path: S3Path) -> S3Path:\n",
     "        return base_path / self.database / f\"{self.schema}.{self.name}\"\n",
-    "       "
+    "\n",
+    "def table_factory(obj: Dict[Any, Any]) -> Table:\n",
+    "    \"\"\"Create a Table object from a dictionary.\"\"\"\n",
+    "    pattern = re.compile(r'(?<!^)(?=[A-Z])')  # https://stackoverflow.com/questions/1175208/elegant-python-function-to-convert-camelcase-to-snake-case\n",
+    "    columns = obj.get(\"schemaMetadata\", {}).get(\"originalTypeMappings\", [])  # 'schemaMetadata': {'originalTypeMappings\n",
+    "    target  = obj.get(\"target\")\n",
+    "    if not target:\n",
+    "        raise ValueError(\"target is required\")\n",
+    "    if not columns:\n",
+    "        columns = []\n",
+    "    columns = [\n",
+    "        { pattern.sub('_', k).lower(): v\n",
+    "            for k, v in\n",
+    "            column.items()\n",
+    "        }\n",
+    "        for column in columns\n",
+    "    ]\n",
+    "\n",
+    "    return Table(\n",
+    "        *target.split(\".\"),\n",
+    "        columns=[\n",
+    "            Column(\n",
+    "                **column\n",
+    "            )\n",
+    "            for column in columns\n",
+    "        ]\n",
+    "    )\n"
    ]
   },
   {
@@ -92,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tables = [Table(*_.get(\"target\").split(\".\")) for _ in export_metadata.get(\"perTableStatus\")]"
+    "tables = [table_factory(_) for _ in export_metadata.get(\"perTableStatus\")]"
    ]
   },
   {
@@ -120,19 +158,31 @@
     "        table: Table instance from the RDS-to-S3 back up catalog\n",
     "    \"\"\"\n",
     "    import pandas as pd\n",
+    "    \n",
     "    name = table.output_name or table.name\n",
     "    schema = table.output_schema or table.schema\n",
+    "\n",
+    "    datetime_cols = [_.column_name for _ in table.columns if _.original_type.startswith(\"timestamp\")]\n",
+    "\n",
     "    with engine.connect() as con:\n",
     "        if not engine.dialect.has_schema(con, schema):\n",
     "            con.execute(sql.schema.CreateSchema(schema, if_not_exists=True))\n",
     "            con.commit()\n",
+    "        # con.execute(sql.schema.DropTable(name, ))\n",
     "    \n",
     "    for path in list(table.get_S3_path(base_path).rglob(\"*.parquet\")):\n",
-    "        pd.read_parquet(path.as_uri()).to_sql(\n",
+    "        data = pd.read_parquet(path.as_uri())\n",
+    "\n",
+    "        if datetime_cols:\n",
+    "            for col in datetime_cols:\n",
+    "                data[col] = pd.to_datetime(data[col], errors=\"coerce\", exact=False)\n",
+    "        \n",
+    "        data.to_sql(\n",
     "            name,\n",
     "            engine,\n",
     "            schema=schema,\n",
-    "            if_exists=\"append\"\n",
+    "            if_exists=\"append\",\n",
+    "            index=False,\n",
     "        )"
    ]
   },
